<resources>
    <string name="app_name">weather app</string>
    <string name="temperature">%1$d°C</string>
    <string name="condition_text">Sunny</string>
    <string name="feels_like">Feels like: %1$d °C</string>
    <string name="temp_and_condition">%1$d°C %2$s</string>
    <string name="month_date">%1$s, %2$d</string>
    <string name="wind_kph">%1$d k/h</string>
    <string name="location">%1$s, %2$s</string>
</resources>